# pk

./: .gitignore  README  common.inc  pk
config/: alternatives.inc  compiler.inc  fragment.mk  install.inc  licenses.inc  options.inc  paths.inc  pk.conf  pkgsrc.inc  pkrc.example  platform.inc  smf.inc  tools.inc
lib/: common.inc
lists/: apache24  common  php  python  ruby
patches/lang/erlang.R14B04/: README.md  configure.in  erts__emulator__beam__beam_emu.c  erts__emulator__beam__copy.c  erts__emulator__beam__dist.c  erts__emulator__beam__dtrace-wrapper.h  erts__emulator__beam__erl_async.c  erts__emulator__beam__erl_bif_ddll.c  erts__emulator__beam__erl_bif_info.c  erts__emulator__beam__erl_gc.c  erts__emulator__beam__erl_nif.c  erts__emulator__beam__erl_node_tables.c  erts__emulator__beam__erl_port_task.c  erts__emulator__beam__erl_process.c  erts__emulator__beam__io.c  erts__emulator__sys__common__erl_check_io.c  lib__Makefile  lib__dtrace__c_src__Makefile  lib__dtrace__c_src__dtrace.c  lib__dtrace__c_src__dtrace_user.d  lib__dtrace__examples__dist.d  lib__dtrace__examples__dist.systemtap  lib__dtrace__examples__driver1.d  lib__dtrace__examples__efile_drv.d  lib__dtrace__examples__garbage-collection.d  lib__dtrace__examples__garbage-collection.systemtap  lib__dtrace__examples__memory1.systemtap  lib__dtrace__examples__port1.systemtap  lib__dtrace__examples__process-scheduling.d  lib__dtrace__examples__user-probe.d  lib__dtrace__src__dtrace.app.src  lib__dtrace__vsn.mk  lib__kernel__src__file_server.erl  lib__kernel__test__prim_file_SUITE.erl
(+170 files in other folders)
