$NetBSD$

--- configure.in.orig	2011-05-24 11:16:43.000000000 +0000
+++ configure.in
@@ -225,6 +225,10 @@ AC_ARG_ENABLE(native-libs,
 AS_HELP_STRING([--enable-native-libs],
                [compile Erlang libraries to native code]))
 
+AC_ARG_ENABLE(dtrace,
+AS_HELP_STRING([--enable-dtrace],
+               [Enable DTrace probes]))
+
 AC_ARG_WITH(javac,
 AS_HELP_STRING([--with-javac=JAVAC], [specify Java compiler to use])
 AS_HELP_STRING([--with-javac], [use a Java compiler if found (default)])
